# mas_thesis_ws

./: .gitignore  .gitmodules  README.md  additional_notes  notes
collision_observers/accelerometer/accelerometer_ros/: CMakeLists.txt  package.xml  setup.py
collision_observers/accelerometer/accelerometer_ros/cfg/: accelerometer.cfg  accelerometerGauss.cfg
collision_observers/amcl_monitoring/: package.xml  setup.py
collision_observers/amcl_monitoring/scripts/: amcl_plot
collision_observers/imu/imu_ros/: CMakeLists.txt  package.xml  setup.py
collision_observers/kalman_filter_observer/: CMakeLists.txt  setup.py
collision_observers/kalman_filter_observer/scripts/: kalman_filter_monitor
collision_observers/laser_detection_ros/: CMakeLists.txt  setup.py
collision_observers/laser_detection_ros/cfg/: laser.cfg
collision_observers/laser_detection_ros/scripts/: laser_cusum  laser_for_fusion  laser_gauss
collision_observers/microphone_monitoring/: collision_pyaudio.py
collision_observers/microphone_monitoring/cfg/: microphone.cfg
collision_observers/microphone_monitoring/scripts/: microphone_for_fusion  microphone_labeler
collision_observers/odom_monitoring/: setup.py
custom_launch/: cob3_with_out_arm_pc1.launch  cob3_with_out_arm_pc2.launch
defense/: collisions.launch  demo.world  stage.launch
experiments/: .gitignore
experiments/cob3_custom_launch/: cob3_with_out_arm_pc2.launch
experiments/scripts/analyzeData/: common_states.py  experiments_state_machine.py  faulty_experiments_state_machine.py
experiments/scripts/runTests/: bag_writer_state_machine.py
experiments/terminal_scripts/: go_start
other_sources/amcl_monitoring/: CMakeLists.txt  package.xml  setup.py
other_sources/amcl_monitoring/cfg/: amcl.cfg
other_sources/amcl_monitoring/launch/: collision_detection.launch
other_sources/amcl_monitoring/scripts/: amcl_for_fusion  amcl_monitoring  amcl_plot
other_sources/kalman_filter_observer/: CMakeLists.txt  package.xml
other_sources/kalman_filter_observer/cfg/: kalmanfilter.cfg
other_sources/kalman_filter_observer/scripts/: controller_cusum  kalman_filter_plotter
other_sources/laser_detection_ros/: package.xml
other_sources/laser_detection_ros/cfg/: laser.cfg
other_sources/laser_detection_ros/launch/: collision_detection.launch
other_sources/laser_detection_ros/scripts/: laser_cusum  laser_for_fusion  laser_gauss  laser_plot
other_sources/microphone_monitoring/: CMakeLists.txt  package.xml  setup.py
other_sources/microphone_monitoring/cfg/: microphone.cfg
other_sources/microphone_monitoring/launch/: collision_detection.launch
other_sources/microphone_monitoring/scripts/: mic_capture  microphone_for_fusion  microphone_plot  noise_monitoring
other_sources/odom_monitoring/: CMakeLists.txt  package.xml
other_sources/odom_monitoring/cfg/: odom.cfg
other_sources/odom_monitoring/launch/: collision_detection.launch
other_sources/odom_monitoring/scripts/: odom_for_fusion  odom_monitoring  odom_plot
preliminar_tests/camera_colliison_detection/: CHANGELOG
preliminar_tests/resources/07-11-17/: README
preliminar_tests/rosbags/Accelerometer-11-11/: README
reference_videos/camera_colliison_detection/: notes
rosbag_test/: basic_topics  collide_front.bag  collide_front_fast_speed.bag  collide_front_wall.bag  collide_front_wall_fast_speed.bag  collide_rotate_left.bag  collide_rotate_right.bag  collide_side.bag  do_nothing.bag  move_forward.bag
rqt_multiplot/: cam_cusum_multiplot.xml  collisions_real_time.xml  imu_cusum_multiplot.xml  kalman_filter_multiplot.xml  kalman_filter_without_raw.xml  lidast_cusum_multiplot.xml  rqt_multiplot.xml  rqt_multiplot_comparison.xml
rviz/: collisions.rviz
scripts/: .gitignore  bag_writer_state_machine.py  collision_experiments_state_machine.py  experiments_state_machine.py  file  odom_mapper_ros.py  read_data.py  rosbag_cob3.sh  rosbag_save.sh  rosbag_youbot.sh  save_data.py
scripts/experiments/: collision_label_helper.py
scripts/experiments/analyzeData/: common_states.py  experiments_state_machine.py  faulty_experiments_state_machine.py  my_sm.py
scripts/experiments/runTests/: bag_writer_state_machine.py  collision_experiments_state_machine.py
scripts/free_motion/: go_goal
scripts/kalman_filter/: kalman_filter_multidimensional_example.py
scripts/ploting_tools/: plot_maker.py
scripts/terminal_scripts/: rosbag_cob3.sh  rosbag_cob3_extended.sh
unmerged/collision_visualizer/: CMakeLists.txt  README  setup.py
unmerged/collision_visualizer/scripts/: rqt_collisions_visualizer
unmerged/footprint_checker/: CHANGELOG.rst  CMakeLists.txt  package.xml
unmerged/footprint_checker/config/: default_footprint.xml
unmerged/footprint_checker/ros/include/footprint_checker/: base_collision_checker.h  collision_checker.h  footprint_extender.h
unmerged/footprint_checker/ros/src/: base_collision_checker.cpp  base_collision_checker_node.cpp  collision_checker.cpp  footprint_extender.cpp
unmerged/footprint_checker/srv/: CollisionCheckerMsg.srv
unmerged/kinetic_energy_monitor/: CMakeLists.txt  package.xml
unmerged/kinetic_energy_monitor/ros/include/kinetic_energy_monitor/: kinetic_energy_monitor.h
unmerged/kinetic_energy_monitor/ros/src/: kinetic_energy_monitor.cpp  kinetic_energy_monitor_node.cpp
unmerged/kinetic_energy_monitor/srv/: KineticEnergyMonitorMsg.srv
unmerged/mcr_recovery_behaviors/: CMakeLists.txt  package.xml
unmerged/velocity_controller_monitoring/: CMakeLists.txt  package.xml  setup.py
unmerged/velocity_controller_monitoring/cfg/: filter.cfg
unmerged/velocity_controller_monitoring/scripts/: controller_filter  controller_plot
visualization_tools/collision_visualizer/: package.xml  plugin.xml
visualization_tools/collision_visualizer/scripts/: rqt_collisions_visualizer
visualization_tools/rqt_multiplot/: README  cam_cusum_multiplot.xml  collisions_real_time.xml  kalman_filter_multiplot.xml  rqt_multiplot.xml  rqt_multiplot_cmd.xml  simplified_collision.xml
visualization_tools/rviz/: README  collisions.rviz
(+85 files in other folders)
