<package>
  <name>footprint_checker</name>
  <version>0.2.0</version>
  <description>
    This package provides the functionality to check if base footprint is in collision, the given target pose and the costmap information.
  </description>
  <maintainer email="jose.mayoral@smail.inf.h-brs.de">Jose C Mayoral B</maintainer>
  <license>GPLv3</license>

  <author email="jose.mayoral@smail.inf.h-brs.de">Jose C Mayoral B</author>
  
  <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>map_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>roslint</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_generation</build_depend>
    
    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>map_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>roslint</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>tf</run_depend>
</package>
