<package>
  <name>footprint_checker</name>
  <version>0.2.2</version>
  <description>
    This package provides the functionality to check if base footprint is in collision, the given target pose and the costmap information. Based of base_collision_checker package.
  </description>
  <maintainer email="jose.mayoral@smail.inf.h-brs.de">Jose C Mayoral B</maintainer>
  <license>GPLv3</license>

  <author email="jose.mayoral@smail.inf.h-brs.de">Jose C Mayoral B</author>

  <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>roslint</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>roslint</run_depend>
    <run_depend>tf</run_depend>
</package>
